--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsnd --respawn --transpile-only ./src/server.ts"
+    "dev": "tsnd --respawn --transpile-only ./src/server.ts",
+    "push-db": "npx prisma db push",
+    "generate": "npx prisma generate"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^4.9.0",
     "apollo-server": "^3.11.1",
     "class-validator": "^0.14.0",
     "graphql": "^15.8.0",
@@ -29,6 +32,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
     "prettier": "^2.8.1",
+    "prisma": "^4.9.0",
     "reflect-metadata": "^0.1.13",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
