--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "apollo-server": "^3.11.1",
     "class-validator": "^0.14.0",
     "graphql": "^15.8.0",
+    "graphql-depth-limit": "^1.1.0",
     "type-graphql": "^1.1.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/graphql-depth-limit": "^1.1.3",
     "@types/node": "^18.11.18",
     "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
